...
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="304dp"
        android:text="Search"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/searchInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/description"
...
        android:id="@+id/searchInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:hint="IP/URL/EMAIL"
        />

...
