...
    <TextView
        android:id="@+id/watchlist_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchlist_instruction"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@id/watchlist_input"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/watchlist_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toEndOf="@id/watchlist_instruction"
        app:layout_constraintTop_toBottomOf="@id/watchlist_title_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ListView
        android:id="@+id/the_watchlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
