...
    <item android:id="@+id/Info"
        android:title="Information"

        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/WatchList"
        android:title="WatchList"

        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/sign_out"
...
