...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IP_info_box"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:background="@color/school_navy"
        android:padding="4dp"
        android:onClick="Add_To_Firebase"
...
