<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_title"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_email_text"
        android:text="@string/login_email"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/confirm_password_text"
        app:layout_constraintTop_toBottomOf="@id/signup_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password_text"
        android:text="@string/login_password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/confirm_password_text"
        app:layout_constraintTop_toBottomOf="@id/signup_email_text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_text"
        android:text="@string/confirm_password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/signup_password_text"
        app:layout_constraintTop_toBottomOf="@id/signup_password_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_email_edit"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/signup_email_text"
        app:layout_constraintBottom_toBottomOf="@id/signup_email_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password_edit"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/signup_password_text"
        app:layout_constraintBottom_toBottomOf="@id/signup_password_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_edit"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/confirm_password_text"
        app:layout_constraintBottom_toBottomOf="@id/confirm_password_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:textSize="24sp"
        android:onClick="onSignup"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_return_button"
        android:textSize="24sp"
        android:onClick="onLoginReturn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>